samples/_failures_safe/1761794927_0d153f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a20d2336.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_a20d2336.c:143:5: error: expected declaration or statement at end of input
  143 |     while (parser->current.type == TOKEN_PLUS || parser->current.type == TOKEN_MINUS) {
      |     ^~~~~
./samples/SAFE/__tmp_a20d2336.c:143:5: error: expected declaration or statement at end of input
